force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/Annual_Appraisal_Record__c.field-meta.xml
<CustomField>
    <fullName>Annual_Appraisal_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The record is created automatically annually, not from a probation.</description>
    <label>Annual Appraisal Record</label>
    <type>Checkbox</type>
</CustomField>