force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <description>master detail to appt</description>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Performance Appraisal Trackings</relationshipLabel>
    <relationshipName>Performance_Appraisal_Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>