force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/Appointment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_End_Date__c</fullName>
    <formula>Appointment__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appointment End Date</label>
    <type>Date</type>
</CustomField>