force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/Appraisal_Period_Enhanced__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Period_Enhanced__c</fullName>
    <description>Replaced the formula field 'Appraisal Period' so that user can modify when manually create appraisal record. Updated by formula (Today's year -1) in flow HR Appraisal Tracking</description>
    <label>Appraisal Period</label>
    <length>4</length>
    <type>Text</type>
</CustomField>