force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/Employee_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Full_Name__c</fullName>
    <formula>Appointment__r.Employee_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Name</label>
    <type>Text</type>
</CustomField>