force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <description>To be updated with employee contact name by flow for appraisal reminder sent to supervisor/liaison.</description>
    <label>Employee Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>