force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Appraisal record to become expired after 2nd reminder (is updated by flow HR Appraisal Tracking)</description>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>