force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/First_Appraisal_Period_Formula__c.field-meta.xml
<CustomField>
    <fullName>First_Appraisal_Period_Formula__c</fullName>
    <description>First Appraisal Period year based on 3rd probation due date or appt start date. Based on this field, system can determine if annual appraisal record is to be created.</description>
    <formula>Appointment__r.First_Appraisal_Period_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First  Appraisal Period Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>