force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/IDP_Date__c.field-meta.xml
<CustomField>
    <fullName>IDP_Date__c</fullName>
    <label>IDP Completion Date</label>
    <type>Date</type>
</CustomField>