force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/Invalid__c.field-meta.xml
<CustomField>
    <fullName>Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Under circumstances, appraisal record is marked Invalid. Flow considers this field in its progress.</description>
    <label>Invalid</label>
    <type>Checkbox</type>
</CustomField>