force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/PAT_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>PAT_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Required</label>
    <type>Checkbox</type>
</CustomField>