force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/Send_Past_Due_Notice_2__c.field-meta.xml
<CustomField>
    <fullName>Send_Past_Due_Notice_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Scheduled Job Apex class 'HR_Batch_Send_Appraisal_Reminder_2' updates this box to true to send past due notice# 2</description>
    <label>Send Past Due Notice 2</label>
    <type>Checkbox</type>
</CustomField>