force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/Send_Reminder_1__c.field-meta.xml
<CustomField>
    <fullName>Send_Reminder_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Scheduled Job Apex class 'HR_Batch_Send_Appraisal_Reminder_1' updates this box to true to send reminder # 1</description>
    <label>Send Reminder 1</label>
    <type>Checkbox</type>
</CustomField>