force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/Supervisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Email__c</fullName>
    <description>from Appointment, updated by flow HR Appraisal Tracking</description>
    <label>Supervisor Email</label>
    <type>Email</type>
</CustomField>