force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/Supervisor_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Email_Formula__c</fullName>
    <description>For display only (real time) only. No functionality.</description>
    <formula>Appointment__r.Supervisor_Contact__r.Email</formula>
    <label>Supervisor Email</label>
    <type>Text</type>
</CustomField>