force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/Supervisor_ID__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_ID__c</fullName>
    <description>Copy Sup's contact id to appraisal record so that contact can later reference the appraisal record.</description>
    <label>Supervisor ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>