force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/Tenure__c.field-meta.xml
<CustomField>
    <fullName>Tenure__c</fullName>
    <formula>TEXT (Appointment__r.Tenure__c)</formula>
    <label>Tenure</label>
    <type>Text</type>
</CustomField>