force-app/main/default/objects/Performance_Appraisal_Tracking__c/fields/Third_Probation_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Third_Probation_Due_Date__c</fullName>
    <description>This field references the Probation's X3rd Probation Due. Appraisal reminder dates calculate based on this date.</description>
    <label>Third Probation Due Date</label>
    <type>Date</type>
</CustomField>