force-app/main/default/objects/Performance_Appraisal_Tracking__c/validationRules/No_Future_Date_for_PAT_Completion_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Future_Date_for_PAT_Completion_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Appraisal_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Please enter a date equal to or before today's date.</errorMessage>
</ValidationRule>